Gender-correct sentences :).

--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -189,7 +189,7 @@
                     </div>
                 </div>
                 {{else}}
-                    <p>Tento organizátor ještě žádnou úlohu zatím nevytvořil, ale na nějaké určitě pracuje!</p>
+                    <p>{{no_tasks}}</p>
                 {{/each}}
         {{/if}}
         </div>
