--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -39,8 +39,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Tato aktivita je realizována v&nbsp;rámci projektu Popularizace vědy a&nbsp;výzkumu v&nbsp;přírodních vědách a&nbsp;matematice s&nbsp;využitím potenciálu MU, reg. č.&nbsp;CZ.1.07/2.3.00/45.0018.
-                    Copyright &copy;&nbsp;<a href="/img/ee/tuxs.gif" target="_blank">KSI</a>&nbsp;2015&ndash;2016
+                    Obsah tohoto webu je poskytován pod licenci
+                    <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC&nbsp;BY-NC&nbsp;v4.0</a>.
+                    Copyright &copy;&nbsp;<a href="/img/ee/tuxs.gif" target="_blank">KSI</a>&nbsp;2015&ndash;2016.
                 </div>
             </div>
         </div>
