Autoresize code editor.

--- a/app/templates/components/code-module.hbs
+++ b/app/templates/components/code-module.hbs
@@ -11,7 +11,7 @@
     </div>
 
     <div class="row" style="margin-top:20px; margin-left:0px; margin-right:20px">
-        <label for="threadName">Editor kódu</label>
+        <label>Editor kódu</label>
         {{code-editor content=module.code  id=(construct-id "editor_module" module.id)}}
     </div>
     <div class="row" style="margin-left:0px; margin-right:20px">
