--- a/app/styles/layout/footer.scss
+++ b/app/styles/layout/footer.scss
@@ -10,15 +10,12 @@
   float:left;
 }
 
-$footer-height: 70px;
-
 footer {
     color: ksi-color('text-light');
-    position:inherit;
+    position:absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 'footer-height';
 }
 
 footer h3 {
