--- a/app/templates/loading.hbs
+++ b/app/templates/loading.hbs
@@ -1,3 +1,3 @@
-<section class="container content-section" style="margin-top: 40px;height:500px;">
+<section class="container content-section" style="margin-top: 40px;">
     <div class="loader dots-loader"></div>
 </section>
