--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,23 +1,22 @@
-<div id="wrapper">
-    <div id="header">
-        {{header-component}}
-        {{#if session.isAuthenticated}}
-            {{#if session.current_user.organisator}}
-              <div class="row" style="margin-right: 0px;">
-                {{header-admin}}
-              </div>
-            {{/if}}
+<!-- Wraper already inserted as view div. -->
+<div id="header">
+    {{header-component}}
+    {{#if session.isAuthenticated}}
+        {{#if session.current_user.organisator}}
+          <div class="row" style="margin-right: 0px;">
+            {{header-admin}}
+          </div>
         {{/if}}
-    </div>
+    {{/if}}
+</div>
 
-    <div id="content">
-        {{outlet}}
-    </div>
+<div id="content">
+    {{outlet}}
+</div>
 
-    <div id="footer">
-        {{render "footer"}}
-    </div>
-</div/>
+<div id="footer">
+    {{render "footer"}}
+</div>
 
 <div class="a2a_kit a2a_kit_size_32 a2a_floating_style a2a_vertical_style hidden-xs" style="top:200px;">
     <button type="button" class="btn btn-default btn-vertical" style="margin-top:-50px" data-toggle="modal" data-target="#feedback-modal">
