--- a/app/templates/admin/e-mail.hbs
+++ b/app/templates/admin/e-mail.hbs
@@ -33,6 +33,10 @@
     (kopie bude vždy zaslána na <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>, e-maily oddělujte čárkou anebo středníkem)
   </div>
   <div class="form-group">
+    {{input type="checkbox" checked=successful}}
+    <label>Pouze úspěšným řešitelům</label>
+  </div>
+  <div class="form-group">
     <label>Předmět:</label>
     {{input  class="form-control" value=subject}}
   </div>
