--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -1,4 +1,8 @@
 <!-- header content -->
+<div class="visible-print" style="text-align: center">
+    <h1 style="font-size: 30px">Korespondenční seminář z&nbsp;informatiky</h1>
+    <p>Ročník {{session.year_obj.year}}</p>
+</div>
 <nav class="navbar navbar-trans" role="navigation" style="z-index:150;" id="navbar">
   <div class="container">
         <div class="navbar-header">
