--- a/app/templates/components/module-wrap.hbs
+++ b/app/templates/components/module-wrap.hbs
@@ -32,7 +32,7 @@
       {{/if}}
     {{/if}}
     {{#if opened}}
-    <button class="btn btn-task btn-primary" style="margin-top:20px" {{action "trigger"}}>
+    <button class="btn btn-task btn-primary hidden-print" style="margin-top:20px" {{action "trigger"}}>
       {{#if show}} Odevzdat {{else}} Zkusit odevzdat znovu {{/if}}
     </button>
     {{/if}}
