--- a/app/templates/task/evaluation.hbs
+++ b/app/templates/task/evaluation.hbs
@@ -1,6 +1,7 @@
  {{#if session.isAuthenticated}}
   {{#if submitted}}
     <div style="margin:20px">
+      <h3 class="visible-print">Hodnocení</h3>
       <div style="margin-top:30px">
         <h5>Skóre:</h5>
         <hr>
