--- a/app/templates/task/solution.hbs
+++ b/app/templates/task/solution.hbs
@@ -1,4 +1,5 @@
 <div style="margin:20px">
+    <h3 class="visible-print">Řešení</h3>
     {{#if model.details.solution}}
         {{{model.details.solution}}}
     {{else}}
