--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -2,6 +2,8 @@
     {{warning-login text="nejsi přihlášen. Aby byly tvé operace uloženy, musíš se přihlásit."}}
 {{/unless}}
 
+<h2 class="visible-print">Úlohy</h2>
+
 <section id="graph" class="container content-section">
         <div class="row flex-row-md stickycolumn-parent">
             <!-- graf -->
