--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -1,6 +1,6 @@
 <!-- footer content -->
 <footer class="text-center">
-    <div class="footer-above">
+    <div class="footer-above hidden-print">
         <div class="container">
             <div class="row">
                 <div class="footer-col col-md-12">
