--- a/app/templates/components/results-list.hbs
+++ b/app/templates/components/results-list.hbs
@@ -1,3 +1,4 @@
+
 <table class="table table-striped">
 <thead>
   <tr style="height:45px">
@@ -10,7 +11,7 @@
 </thead>
 <tbody>
     {{#each model as |res|}}
-        <tr class="{{if res.user.successful 'successful'}}" style="height:45px">
+        <tr class="{{if (eq session.current_user.id res.user.id) 'logged-in' (if res.user.successful 'successful') }}" style="height:45px">
                 <td style="text-align: center;">{{res.num}}</td>
           <td>{{#link-to "user-profile" res.user}}{{res.user.full_name}}{{/link-to}}</td>
           <td>
