--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -18,7 +18,7 @@
                         <a href="http://ksp.mff.cuni.cz" title="Korespondenční seminář z programování" class="footer-logo inline-footer" id="ksp-logo"></a>
                         <a href="https://github.com/fi-ksi" title="KSI @ GitHub" class="footer-logo inline-footer" id="github-logo"></a>
                       </div>
-                      <div style="opacity: 0.001;">
+                      <div style="opacity: 0.001; height: 1px;">
                         <img src="/img/logos/email-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/facebook-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/youtube-hover.svg" width="1" height="1"/>
