Add info message to registration.

--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -4,8 +4,15 @@
   {{else}}
   {{#validatable-form action="register" model=model}}
     <div class="jumbotron" style="background-color: transparent">
+        <div class="alert alert-info" role="alert">
+            Od ročníku 2016/2017 mohou KSI řešit bytosti všech věků a&nbsp;pohlaví.
+            Titul úspěšného řešitele a&nbsp;přijetí na FI však mohou získat pouze
+            studenti středních škol a&nbsp;víceletých gymnázií. Kategorie, do které
+            budete zařazeni, se odvíjí od roku maturity, proto jej prosím vyplňte
+            pečlivě.
+        </div>
         <h2>Registrace</h2>
-            <div style="margin-top:30px">
+           <div style="margin-top:30px">
                 <h4>Přihlašovací údaje</h4>
                 <hr>
             </div>
