středoškolák > student střední školy

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -77,9 +77,9 @@
     </div>
 
     <div class="panel panel-ksi">
-      <div class="panel-heading panel-heading-ksi">Q: Mohu řešit KSI i&nbsp;když nejsem středoškolák?</div>
+      <div class="panel-heading panel-heading-ksi">Q: Mohu řešit KSI i&nbsp;když nejsem student střední školy?</div>
       <div class="panel-body">
-        A: Ano, KSI může řešit kdokoli, avšak status úspěšného řešitele mohou získat pouze středoškoláci.
+        A: Ano, KSI může řešit kdokoli, avšak status úspěšného řešitele mohou získat pouze studenti středních škol.
       </div>
     </div>
 
