--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -88,13 +88,13 @@
 
             <hr>
 
-            {{#if model.successful}}
+            {{#if model.percent}}
                 <p id="profile-points-text">
                     Skóre:
                 </p>
                 <div class="progress" style="margin-top:20px">
-                    <div class="progress-bar progress-bar-warning progress-bar-ksi" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{model.successful}}%">
-                        {{model.successful}}&nbsp;%
+                    <div class="progress-bar progress-bar-warning progress-bar-ksi" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{model.percent}}%">
+                        {{model.percent}}&nbsp;%
                     </div>
                 </div>
             {{/if}}
