--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -18,7 +18,7 @@
     {{render "footer"}}
 </div>
 
-<div class="a2a_kit a2a_kit_size_32 a2a_floating_style a2a_vertical_style hidden-xs" style="top:200px;">
+<div class="a2a_kit a2a_kit_size_32 a2a_floating_style a2a_vertical_style hidden-xs" style="top:200px; padding: 0px;">
     <button type="button" class="btn btn-default btn-vertical" style="margin-top:-50px" data-toggle="modal" data-target="#feedback-modal">
       <p id="vazba-text">Zpětná vazba</p>
     </button>
