--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -18,7 +18,7 @@
     {{render "footer"}}
 </div>
 
-<button type="button" class="btn btn-default btn-vertical hidden-xs" style="margin-top:-50px" data-toggle="modal" data-target="#feedback-modal">
+<button id="btn-feedback" type="button" class="btn btn-default hidden-xs" data-toggle="modal" data-target="#feedback-modal">
   <p id="vazba-text">Zpětná vazba</p>
 </button>
 
@@ -88,4 +88,3 @@
 
 <script src="js/index.js"></script>
 <script src="js/jquery.qtip.js"></script>
-<script type="text/javascript" src="//static.addtoany.com/menu/page.js"></script>
