Fix main navbar borer-radius.

--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -3,7 +3,7 @@
     <h1 style="font-size: 30px">Korespondenční seminář z&nbsp;informatiky</h1>
     <p>Ročník {{session.year_obj.year}}</p>
 </div>
-<nav class="navbar navbar-trans" role="navigation" style="z-index:150;" id="navbar">
+<nav class="navbar navbar-trans navbar-static-top" role="navigation" style="z-index:150;" id="navbar">
   <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-main">
