Edit task-grahp styles.
Close #259.

--- a/app/templates/components/tasks-graph.hbs
+++ b/app/templates/components/tasks-graph.hbs
@@ -1,4 +1,4 @@
-<div class="container content-section" id="graph-content">
+<div class="container-fluid" id="graph-content">
     {{#unless root_node}}
         <p>V aktuálním ročníku nejsou zveřejněny zatím žádné úlohy.</p>
     {{/unless}}
