--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -7,13 +7,13 @@
 <section id="graph" class="container content-section">
         <div class="row flex-row-md stickycolumn-parent">
             <!-- graf -->
-            <div class="col-sm-12 col-md-11 col-md-push-2">
+            <div class="col-sm-12 col-md-9 col-md-push-3">
                 {{tasks-graph model=model.tasks sub="sub" assign="assign" stat="stat" discuss="discuss" solution="solution" }}
             </div>
 
             <!-- vysvetlivky -->
-            <div class="col-sm-12 col-md-1 col-md-pull-11">
-                <div id="graph-info-panel" class="panel panel-ksi stickycolumn" style="width:220px">
+            <div class="col-sm-12 col-md-3 col-md-pull-9">
+                <div id="graph-info-panel" class="panel panel-ksi stickycolumn center-block">
                   <div class="panel-heading panel-heading-ksi"><h4 align="center">Vysvětlivky</h4></div>
                   <div class="panel-body">
                         <h5 align="center">Uzly</h5>
