--- a/app/templates/task.hbs
+++ b/app/templates/task.hbs
@@ -19,18 +19,10 @@
           {{/if}}
         </div>
 
-        <div class="row hidden-print" style="margin-top: 20px">
+        <div class="row hidden-print container-fluid" style="margin-top: 20px">
             <nav class="navbar navbar-uloha" role="navigation">
-                <div class="navbar-header page-scroll">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-task-navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
                 <div class="container-fluid">
-                    <div class="collapse navbar-collapse" id="bs-task-navbar-collapse">
+                    <div class="navbar-header-menu" id="bs-task-navbar">
                         <ul class="nav navbar-nav">
                             {{#link-to "task.assignment" tagName="li"}}<a href="{{view.href}}">Zadání</a>{{/link-to}}
                             {{#link-to "task.statistics" tagName="li"}}<a href="{{view.href}}">Statistika</a>{{/link-to}}
@@ -38,7 +30,7 @@
                             {{#link-to "task.evaluation" tagName="li"}}<a href="{{view.href}}">Hodnocení</a>{{/link-to}}
                             {{#link-to "task.solution" tagName="li"}}<a href="{{view.href}}">Řešení</a>{{/link-to}}
                         </ul>
-                    </div><!-- /.navbar-collapse -->
+                    </div><!-- /.navbar -->
                 </div><!-- /.container-fluid -->
             </nav>
         </div>
