Allow task reloading.
Close #262.

--- a/app/styles/layout/navbar-uloha.scss
+++ b/app/styles/layout/navbar-uloha.scss
@@ -71,6 +71,10 @@
     float: left !important;
 }
 
+.navbar-uloha .navbar-right {
+    float: right !important;
+}
+
 .navbar-uloha .navbar-nav {
     margin: 0px 0px !important;
 }
