--- a/app/templates/settings/personal.hbs
+++ b/app/templates/settings/personal.hbs
@@ -16,6 +16,11 @@
   </div>
 
   <div class="form-group">
+    <label for="surname">Přezdívka (nepovinné):</label>
+    {{input value=model.nick_name class="form-control" required=false}}
+  </div>
+
+  <div class="form-group">
     <label for="surname">Přijmení:</label>
     {{input value=model.last_name class="form-control" required=true}}
   </div>
