Optimize profile for printing.
Close #264.

--- a/app/styles/base/links.scss
+++ b/app/styles/base/links.scss
@@ -24,3 +24,8 @@ a.header-link:hover {
 a.header-link:active {
   outline: 0;
 }
+
+// Print to content text.
+.noContent[href]:after {
+    content: none !important;
+}
