--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -18,7 +18,7 @@
     {{render "footer"}}
 </div>
 
-<button id="btn-feedback" type="button" class="btn btn-default hidden-xs" data-toggle="modal" data-target="#feedback-modal">
+<button id="btn-feedback" type="button" class="btn btn-default hidden-xs hidden-print" data-toggle="modal" data-target="#feedback-modal">
   <p id="vazba-text">Zpětná vazba</p>
 </button>
 
