--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -8,14 +8,16 @@
                       <div class="row row-centered">
                         <a href="mailto:ksi@fi.muni.cz" title="ksi@fi.muni.cz" class="footer-logo inline-footer" id="mail-logo"></a>
                         <a href="https://www.facebook.com/ksi.fi.muni" title="Facebook"class="footer-logo inline-footer" id="facebook-logo"></a>
-                        <a href="https://www.youtube.com/channel/UCH0K2_tAhkJNlvfRo5NsEIg" title="YouTube" class="footer-logo inline-footer" id="youtube-logo"></a>
-                        <a href="http://www.muni.cz/" title="Masarykova Univerzita Brno" class="footer-logo inline-footer" id="mu-logo"></a>
                         <a href="http://www.fi.muni.cz/index.xhtml.cs" title="Fakulta Informatiky MU" class="footer-logo inline-footer" id="fi-logo"></a>
+                        <a href="http://www.muni.cz/" title="Masarykova Univerzita Brno" class="footer-logo inline-footer" id="mu-logo"></a>
+                        <!-- TODO: kscuk link -->
+                        <a href="http://intersob.math.muni.cz" title="Soutěž InterSoB" class="footer-logo inline-footer" id="sob-logo"></a>
+                        <a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo inline-footer" id="los-logo"></a>
+                        <a href="http://zverinec.fi.muni.cz" title="Spolek přátel severské zvěře" class="footer-logo inline-footer" id="zverinec-logo"></a>
                         <a href="http://brkos.math.muni.cz" title="BRněnský KOrespondenční Seminář" class="footer-logo inline-footer" id="brkos-logo"></a>
                         <a href="http://keks.math.muni.cz/" title="Korespondenční EKologický Seminář" class="footer-logo inline-footer" id="keks-logo"></a>
-                        <a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo inline-footer" id="los-logo"></a>
-                        <a href="http://intersob.math.muni.cz" title="Soutěž InterSoB" class="footer-logo inline-footer" id="sob-logo"></a>
                         <a href="http://ksp.mff.cuni.cz" title="Korespondenční seminář z programování" class="footer-logo inline-footer" id="ksp-logo"></a>
+                        <a href="https://www.youtube.com/channel/UCH0K2_tAhkJNlvfRo5NsEIg" title="YouTube" class="footer-logo inline-footer" id="youtube-logo"></a>
                         <a href="https://github.com/fi-ksi" title="KSI @ GitHub" class="footer-logo inline-footer" id="github-logo"></a>
                       </div>
                       <div style="opacity: 0.001; height: 1px;">
@@ -24,6 +26,7 @@
                         <img src="/img/logos/youtube-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/fi-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/mu-hover.svg" width="1" height="1"/>
+                        <img src="/img/logos/zverinec-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/keks-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/brkos-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/intersob-hover.svg" width="1" height="1"/>
