Unpack collapsible bloks in print.
Close #269.

--- a/app/styles/pages/task.scss
+++ b/app/styles/pages/task.scss
@@ -3,3 +3,10 @@
         margin-top: 30px;
     }
 }
+
+@media print {
+    /* rozbalit collapse bloky pri tisku */
+    #task-assignment .collapse {
+        display: block !important;
+    }
+}
