FAQ: add info about solving in maturita year.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -39,14 +39,13 @@
 
     <li><p>Přiblíží se ti látka vyučovaná na vysokých školách. Dokážeš se lépe rozhodnout, co chceš studovat, a&nbsp;pokud se rozhodneš pro informatiku, získáš mírný náskok na své budoucí spolužáky.</p></li>
 
-        <li><p>Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek.</p></li>
+    <li><p>Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek.</p></li>
 
     <li><p>A&nbsp;hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v&nbsp;podobě <a href="http://kscuk.fi.muni.cz/">týdenního soustředění</a>.</p></li>
 
     </ul>
 
   <h2 id="faq">FAQ</h2>
-  <!--<p id="date-text">Publikováno 4.8.2015</p>-->
 
     <div class="panel panel-ksi">
       <div class="panel-heading panel-heading-ksi">Q: Som Slovák. Môžem písať riešenie v&nbsp;slovenčine?</div>
@@ -83,6 +82,13 @@
       </div>
     </div>
 
+    <div class="panel panel-ksi">
+      <div class="panel-heading panel-heading-ksi">Q: Jsem v maturitním ročníku, mám šanci být přijat na FI skrze vyřešení KSI?</div>
+      <div class="panel-body">
+        A: Ano, seminář ukončujeme vždy tak, abychom stihli vedení FI poslat seznam úspěšných řešitelů před uzavřením přijímacího řízení.
+        Podej si žádost o prominutí přijímací zkoušky v řádném termínu. Pokud se staneš úspěšným řešitelem KSI, budeš určitě přijat.
+      </div>
+    </div>
 
   <h2 id="calendar">Kalendář akcí KSI</h2>
     <p>Významné akce KSI, jako Ksílety nebo termíny odevzdání úloh, zaznamenáváme do <a href="https://calendar.google.com/calendar/embed?src=07cn4qi2qm1g3rtpuls78dmsbg%40group.calendar.google.com" target="_blank">Google kalendáře KSI</a>. Tento kalendář si můžeš <a href="https://calendar.google.com/calendar/render?cid=07cn4qi2qm1g3rtpuls78dmsbg@group.calendar.google.com#main_7" target="_blank">importovat</a>.</p>
