--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -10,7 +10,7 @@
                         <a href="https://www.facebook.com/ksi.fi.muni" title="Facebook"class="footer-logo inline-footer" id="facebook-logo"></a>
                         <a href="http://www.fi.muni.cz/index.xhtml.cs" title="Fakulta Informatiky MU" class="footer-logo inline-footer" id="fi-logo"></a>
                         <a href="http://www.muni.cz/" title="Masarykova Univerzita Brno" class="footer-logo inline-footer" id="mu-logo"></a>
-                        <!-- TODO: kscuk link -->
+                        <a href="http://kscuk.fi.muni.cz/" title="K-SCUK" class="footer-logo inline-footer" id="kscuk-logo"></a>
                         <a href="http://intersob.math.muni.cz" title="Soutěž InterSoB" class="footer-logo inline-footer" id="sob-logo"></a>
                         <a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo inline-footer" id="los-logo"></a>
                         <a href="http://zverinec.fi.muni.cz" title="Spolek přátel severské zvěře" class="footer-logo inline-footer" id="zverinec-logo"></a>
@@ -26,6 +26,7 @@
                         <img src="/img/logos/youtube-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/fi-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/mu-hover.svg" width="1" height="1"/>
+                        <img src="/img/logos/kscuk-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/zverinec-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/keks-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/brkos-hover.svg" width="1" height="1"/>
